adjust lazyload options

--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -24,6 +24,7 @@
 @import './app/spacing';
 @import './app/align';
 @import './app/lists';
+@import './app/performant-media';
 
 /**
  * @wordpress/block-library styles
