--- a/web/app/themes/sage/resources/assets/styles/app/performant-media.scss
+++ b/web/app/themes/sage/resources/assets/styles/app/performant-media.scss
@@ -1,8 +1,8 @@
-.lazy-load {
+img[data-lazy-src] {
   opacity: 0;
 }
 
-.lazy-load.is-loaded {
+img.lazyloaded[data-lazy-src] {
   -webkit-animation: focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
   animation: focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
   opacity: 1;
