--- a/web/app/themes/sage/resources/assets/styles/blocks/core-pullquote.scss
+++ b/web/app/themes/sage/resources/assets/styles/blocks/core-pullquote.scss
@@ -17,16 +17,20 @@
 
         &::before {
           @apply text-blue;
+          @apply relative;
+          @apply text-7xl;
+          @apply block;
 
           content: '“';
-          position: relative;
         }
 
         &::after {
           @apply text-blue;
+          @apply relative;
+          @apply text-7xl;
+          @apply block;
 
           content: '”';
-          position: relative;
         }
       }
     }
