--- a/web/app/themes/sage/resources/assets/styles/blocks/core-pullquote.scss
+++ b/web/app/themes/sage/resources/assets/styles/blocks/core-pullquote.scss
@@ -14,6 +14,7 @@
         @apply text-left;
         @apply break-normal;
         @apply italic;
+        @apply leading-none;
 
         &::before {
           @apply text-blue;
