--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -50,6 +50,9 @@
 /**
  * Blocks
  */
+@import './blocks/core-button';
+@import './blocks/core-navigation';
+@import './blocks/core-search';
 @import './blocks/core-embed';
 @import './blocks/core-heading';
 @import './blocks/core-group';
