--- a/web/app/themes/sage/resources/assets/styles/editor.scss
+++ b/web/app/themes/sage/resources/assets/styles/editor.scss
@@ -149,4 +149,6 @@
   @import './blocks/core-heading';
   @import './blocks/core-group';
   @import './blocks/core-pullquote';
+  @import './blocks/core-button';
+  @import './blocks/core-embed';
 }
