remove modal. fix cover

--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -51,6 +51,7 @@
  * Blocks
  */
 @import './blocks/core-button';
+@import './blocks/core-cover';
 @import './blocks/core-navigation';
 @import './blocks/core-search';
 @import './blocks/core-embed';
