gutenberg fix: undefined postcss vars

--- a/web/app/themes/sage/resources/assets/styles/wordpress/_variables.scss
+++ b/web/app/themes/sage/resources/assets/styles/wordpress/_variables.scss
@@ -17,6 +17,10 @@ $mobile-text-min-font-size: 16px; // Any font size below 16px will cause Mobile 
 // Grid size
 $grid-size-small: 4px;
 $grid-size: 8px;
+$grid-unit-10: 10px;
+$grid-unit-20: 20px;
+$grid-unit-30: 30px;
+$grid-unit-40: 40px;
 $grid-size-large: 16px;
 
 // Widths, heights & dimensions
