--- a/web/app/themes/sage/resources/assets/styles/app/typography.scss
+++ b/web/app/themes/sage/resources/assets/styles/app/typography.scss
@@ -29,6 +29,13 @@ h6 {
   @apply leading-none;
 }
 
+h1,
+h2 {
+  strong {
+    @apply font-bold;
+  }
+}
+
 p,
 ol,
 ul,
@@ -90,8 +97,6 @@ li {
       @apply duration-500;
       @apply ease-in-out;
       @apply bg-blue-500;
-      @apply transform;
-      @apply -translate-y-1;
     }
   }
 }
