postflight looks good

--- a/web/app/themes/sage/resources/assets/styles/app.scss
+++ b/web/app/themes/sage/resources/assets/styles/app.scss
@@ -2,6 +2,7 @@
  * @tailwind base
  */
 @import 'tailwindcss/base';
+@import './app/postflight';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
