--- a/web/app/themes/sage/resources/assets/styles/app/fonts.scss
+++ b/web/app/themes/sage/resources/assets/styles/app/fonts.scss
@@ -1,1 +1,1 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,800&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:ital,wght@400,700,800&subset=latin);
