fix: heading sizes

--- a/web/app/themes/sage/resources/styles/app.scss
+++ b/web/app/themes/sage/resources/styles/app.scss
@@ -14,3 +14,10 @@
 @import './app/spacing';
 @import './app/align';
 @import './app/lists';
+
+/**
+ * Gutenberg
+ */
+@import './blocks/core-button';
+@import './blocks/core-cover';
+@import './blocks/core-heading';
