--- a/web/app/themes/sage/resources/styles/app/typography.scss
+++ b/web/app/themes/sage/resources/styles/app/typography.scss
@@ -36,6 +36,30 @@ h2 {
   }
 }
 
+h1 {
+  @apply text-4xl;
+}
+
+h2 {
+  @apply text-3xl;
+}
+
+h3 {
+  @apply text-2xl;
+}
+
+h4 {
+  @apply text-xl;
+}
+
+h5 {
+  @apply text-xl;
+}
+
+h6 {
+  @apply text-xl;
+}
+
 p,
 ol,
 ul,
