--- a/web/app/themes/sage/resources/styles/editor.scss
+++ b/web/app/themes/sage/resources/styles/editor.scss
@@ -1,13 +1,24 @@
+/**
+ * @tailwind base
+ */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 .block-editor-block-list__layout {
   @apply font-sans;
+  @apply max-w-screen-md;
+  @apply mx-auto;
 }
 
 .wp-block {
-  @apply max-w-screen-md;
-
   &.editor-post-title__block .editor-post-title__input {
     @apply font-sans #{!important};
   }
+}
+
+.wp-block-tinypixel-banner {
+  @apply text-white;
 }
 
 .editor-post-title {
@@ -62,7 +73,7 @@
   * Heading styles
   */
   h1 {
-    @apply text-4xl #{!important};
+    @apply text-3xl #{!important};
     @apply uppercase #{!important};
     @apply font-bold #{!important};
     @apply tracking-tight #{!important};
@@ -74,7 +85,7 @@
   }
 
   h2 {
-    @apply text-3xl #{!important};
+    @apply text-2xl #{!important};
     @apply uppercase #{!important};
     @apply font-bold #{!important};
     @apply tracking-tight #{!important};
@@ -85,7 +96,7 @@
   }
 
   h3 {
-    @apply text-4xl #{!important};
+    @apply text-xl #{!important};
     @apply uppercase #{!important};
     @apply font-bold #{!important};
     @apply tracking-tight #{!important};
@@ -94,7 +105,7 @@
   h4,
   h5,
   h6 {
-    @apply text-3xl #{!important};
+    @apply text-xl #{!important};
     @apply uppercase #{!important};
     @apply font-bold #{!important};
     @apply tracking-tight #{!important};
@@ -135,34 +146,6 @@
       @apply not-italic #{!important};
       @apply uppercase #{!important};
       @apply font-bold #{!important};
-    }
-  }
-
-  [data-align="full"]:not(.override),
-  [data-align="wide"]:not(.override) {
-    @apply my-12;
-  }
-
-  [data-align="wide"] {
-    margin-left: calc(-90vw/2 + 100%/2) !important;
-    margin-right: calc(-90vw/2 + 100%/2) !important;
-    width: 90vw !important;
-    max-width: 90vw !important;
-
-    img {
-      width: 90vw !important;
-    }
-  }
-
-  [data-align="full"] {
-    margin-left: calc(-100vw/2 + 100%/2) !important;
-    margin-right: calc(-100vw/2 + 100%/2) !important;
-    width: 100vw !important;
-    max-width: 100vw !important;
-
-    img {
-      width: 100% !important;
-      max-width: 100% !important;
     }
   }
 }
