--- a/web/app/plugins/dream-defenders-modal/resources/assets/styles/public.css
+++ b/web/app/plugins/dream-defenders-modal/resources/assets/styles/public.css
@@ -2,6 +2,17 @@
 
 #tinymodal {
   > div {
-    @apply fixed top-0 left-0 right-0 bottom-0 h-screen w-full mx-0 px-0;
+    @apply fixed top-0 left-0 right-0 h-screen w-full mx-0 px-0;
+  }
+
+  .fixed {
+    @apply max-h-80;
+  }
+
+  figure {
+    width: 100%;
+    img {
+      width: 100%;
+    }
   }
 }
